--- a/userprofile_app/templates/userprofile_app/lectures/lecture_comments_list.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lecture_comments_list.html
@@ -59,8 +59,12 @@
                         <th scope="col">سخرانی</th>
                         <th scope="col">نظر</th>
                         <th scope="col">تاریخ نظر</th>
+                        <th scope="col">اکتیو</th>
+                        <th scope="col">حذف</th>
                         <th scope="col">پاسخ</th>
                         <th scope="col">تاریخ پاسخ</th>
+                        <th scope="col">اکتیو(پاسخ)</th>
+                        <th scope="col">حذف(پاسخ)</th>
                         <th scope="col">اقدام</th>
                     </tr>
                     </thead>
@@ -76,7 +80,7 @@
 
 
                             <!-- comment text -->
-                            <td style="width: 350px;">
+                            <td>
                                 {{ comment.text }}
                                 <br>
                                 <span style="color: indianred">
@@ -87,8 +91,26 @@
                             <!-- create_date comment -->
                             <td>{{ comment.created_date|to_shamsi }}</td>
 
+                            <!-- is_active -->
+                            <td>
+                                {% if comment.is_active %}
+                                    <span style="color:green;">&#10004;</span>
+                                {% else %}
+                                    <span style="color:red;">&#10008;</span>
+                                {% endif %}
+                            </td>
+
+                            <!-- is_delete -->
+                            <td>
+                                {% if comment.is_delete %}
+                                    <span style="color:green;">&#10004;</span>
+                                {% else %}
+                                    <span style="color:red;">&#10008;</span>
+                                {% endif %}
+                            </td>
+
                             <!-- response comment -->
-                            <td style="width: 350px;">
+                            <td>
                                 {% if comment.lecturecomment_set.all %}
                                     {% for reply in comment.lecturecomment_set.all %}
                                         {{ reply.text }}
@@ -115,6 +137,26 @@
 
                             </td>
 
+                            {% if comment.lecturecomment_set.all.first|default_if_none:"-" %}
+                                <!-- is_active -->
+                                <td>
+                                    {% if comment.lecturecomment_set.all.first.is_active %}
+                                        <span style="color:green;">&#10004;</span>
+                                    {% else %}
+                                        <span style="color:red;">&#10008;</span>
+                                    {% endif %}
+                                </td>
+
+                                <!-- is_delete -->
+                                <td>
+                                    {% if comment.lecturecomment_set.all.first.is_delete %}
+                                        <span style="color:green;">&#10004;</span>
+                                    {% else %}
+                                        <span style="color:red;">&#10008;</span>
+                                    {% endif %}
+                                </td>
+                            {% endif %}
+
                             <!-- actions -->
                             <td>
                                 <div class="card-action-wrap d-flex">
@@ -132,6 +174,46 @@
                                        data-toggle="tooltip" title="ویرایش">
                                         <i class="la la-edit"></i>
                                     </a>
+
+                                    <!-- delete -->
+                                    <a href="javascript:void(0)" data-toggle="modal" data-target="#deleteModal-{{ comment.id }}"
+                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-danger"
+                                       data-toggle="tooltip" title="حذف">
+                                        <i class="la la-trash"></i>
+                                    </a>
+
+                                    <!-- modal: delete -->
+                                    <div class="modal fade modal-container" id="deleteModal-{{ comment.id }}" tabindex="-1" role="dialog"
+                                         aria-labelledby="deleteModalTitle-{{ comment.id }}"
+                                         aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-body text-center">
+                                                    <span class="la la-exclamation-circle fs-60 text-warning"></span>
+                                                    <h4 class="modal-title fs-19 font-weight-semi-bold pt-2 pb-1"
+                                                        id="deleteModalTitle-{{ comment.id }}">نظر شما حذف خواهد شد!
+                                                    </h4>
+                                                    <p>آیا مطمئن هستید که می خواهید نظر خود را حذف کنید؟</p>
+                                                    <div class="btn-box pt-4">
+
+                                                        <form
+                                                                action="{% url 'userprofile_app:article_comment_delete' pk=comment.id %}"
+                                                                method="post">
+                                                            {% csrf_token %}
+                                                            <button type="button" class="btn font-weight-medium mr-3"
+                                                                    data-dismiss="modal">لغو
+                                                            </button>
+                                                            <button type="submit"
+                                                                    class="btn theme-btn theme-btn-sm lh-30">
+                                                                حذف
+                                                            </button>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
 
                                 </div>
                             </td>
