--- a/media_app/templates/media_app/lecture_detail_page.html
+++ b/media_app/templates/media_app/lecture_detail_page.html
@@ -7,6 +7,8 @@
     سخنرانی
 {% endblock %}
 {% block content %}
+
+    <!-- breadcrumb -->
     <section class="breadcrumb-area section-padding img-bg-3">
         <div class="overlay"></div>
         <div class="container">
@@ -23,6 +25,7 @@
             </div>
         </div>
     </section>
+
     <section class="course-area section--padding">
         <div class="container">
             <div class="row">
@@ -330,44 +333,76 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- show comment -->
                     {% if comments %}
-                        <!-- comments -->
                         <div class="card card-item">
                             <div class="card-body">
-                                <div class="course-overview-card pt-4">
-                                    <h3 class="fs-24 font-weight-semi-bold pb-4">نظرات</h3>
-                                    <div class="review-wrap">
+                                <div class="comments-wrap pt-5" id="comments">
+                                    <div class="d-flex align-items-center justify-content-between pb-4">
+                                        <h3 class="fs-22 font-weight-semi-bold">نظرات</h3>
+                                        <span class="ribbon ribbon-lg">{{ comments.count }}</span>
+                                    </div>
+
+                                    <div class="comment-list">
                                         {% for comment in comments %}
-                                            <div class="media media-card border-bottom border-bottom-gray pb-4 mb-4">
+                                            <div class="media media-card border-bottom pb-4 mb-4 {% if not comment.is_active %}bg-light{% endif %}">
                                                 <div class="media-img mr-4 rounded-full">
-                                                    <img class="rounded-full lazy"
-                                                         src="{{ comment.user.avatar.url }}"
-                                                         alt="تصویر کاربر" style="">
+                                                    {% if comment.user and comment.user.avatar %}
+                                                        <img class="rounded-full lazy" src="{{ comment.user.avatar.url }}" alt="تصویر کاربر">
+                                                    {% else %}
+                                                        <img class="rounded-full lazy" src="{% static 'images/default-avatar.png' %}" alt="کاربر مهمان">
+                                                    {% endif %}
                                                 </div>
+
                                                 <div class="media-body">
-                                                    <div class="d-flex flex-wrap align-items-center justify-content-between pb-1">
-                                                        <h5>{{ comment.user.get_full_name }}</h5>
-                                                        <div class="review-stars">
-                                                            <span class="la la-star"></span>
-                                                            <span class="la la-star"></span>
-                                                            <span class="la la-star"></span>
-                                                            <span class="la la-star"></span>
-                                                            <span class="la la-star"></span>
-                                                        </div>
-                                                    </div>
+                                                    <h5 class="pb-2">
+                                                        {% if comment.user %}
+                                                            {{ comment.user.get_full_name|default:comment.user.username }}
+                                                        {% else %}
+                                                            {{ comment.name }}
+                                                        {% endif %}
+                                                    </h5>
+
                                                     <span class="d-block lh-18 pb-2">{{ comment.created_date|timeago }}</span>
-                                                    <p class="pb-2">{{ comment.text }}</p>
-                                                    <div class="helpful-action">
-                                                        <span class="d-block fs-13">آیا این بررسی مفید بود؟</span>
-                                                        <button class="btn">آره</button>
-                                                        <button class="btn">خیر</button>
-                                                        <span class="btn-text fs-14 cursor-pointer pl-1" data-toggle="modal"
-                                                              data-target="#reportModal">گزارش</span>
-                                                    </div>
+                                                    <p class="pb-3">{{ comment.text }}</p>
+
+                                                    {% if not comment.is_active and request.user == comment.user %}
+                                                        <small class="text-warning">(در انتظار تأیید مدیر)</small>
+                                                    {% endif %}
                                                 </div>
                                             </div>
-                                        {% endfor %}
 
+                                            {# نمایش پاسخ‌ها #}
+                                            {% for reply in comment.replies %}
+                                                <div class="media media-card border-bottom pb-4 mb-4 review-reply {% if not reply.is_active %}bg-light{% endif %}">
+                                                    <div class="media-img mr-4 rounded-full">
+                                                        {% if reply.user and reply.user.avatar %}
+                                                            <img class="rounded-full lazy" src="{{ reply.user.avatar.url }}" alt="تصویر کاربر">
+                                                        {% else %}
+                                                            <img class="rounded-full lazy" src="{% static 'images/default-avatar.png' %}" alt="کاربر مهمان">
+                                                        {% endif %}
+                                                    </div>
+
+                                                    <div class="media-body">
+                                                        <h5 class="pb-2">
+                                                            {% if reply.user %}
+                                                                {{ reply.user.get_full_name|default:reply.user.username }}
+                                                            {% else %}
+                                                                {{ reply.name }}
+                                                            {% endif %}
+                                                        </h5>
+
+                                                        <span class="d-block lh-18 pb-2">{{ reply.created_date|timeago }}</span>
+                                                        <p class="pb-3">{{ reply.text }}</p>
+
+                                                        {% if not reply.is_active and request.user == reply.user %}
+                                                            <small class="text-warning">(در انتظار تأیید مدیر)</small>
+                                                        {% endif %}
+                                                    </div>
+                                                </div>
+                                            {% endfor %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
@@ -375,34 +410,75 @@
                     {% endif %}
 
 
-                    <!-- add comment -->
+                    <!-- add_comment -->
                     <div class="card card-item">
                         <div class="card-body">
                             <div id="comment-form"></div>
                             <div class="add-comment-wrap pt-5">
                                 <h3 class="fs-22 font-weight-semi-bold pb-4">یک نظر اضافه کنید</h3>
 
-                                {% if user.is_authenticated %}
-                                    <form method="post" class="row"
-                                          action="{% url 'media_app:lecture_detail_page' pk=lecture.pk %}">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="parent_id" id="parent_id" value="">
+                                <form method="post" class="row" action="">
+                                    {% csrf_token %}
+
+                                    <input type="hidden" name="parent_id" id="parent_id" value="">
+
+                                    {% if request.user.is_authenticated %}
+                                        <!-- message -->
                                         <div class="input-box col-lg-12">
                                             <div class="form-group">
                                                 <textarea class="form-control form--control pl-3" name="message"
-                                                          placeholder="پیام بنویس" rows="10"></textarea>
+                                                          rows="10"></textarea>
+
+                                            </div>
+                                        </div>
+                                    {% else %}
+                                        <!-- name -->
+                                        <div class="input-box col-lg-6">
+                                            <label class="label-text">نام</label>
+                                            <div class="form-group">
+                                                <input class="form-control form--control" type="text" name="name">
+                                                <span class="la la-user input-icon"></span>
                                             </div>
                                         </div>
 
-                                        <div class="btn-box col-lg-12">
-                                            <button class="btn theme-btn" type="submit">ثبت کردن نظر</button>
+                                        <!-- email -->
+                                        <div class="input-box col-lg-6">
+                                            <label class="label-text">پست الکترونیک</label>
+                                            <div class="form-group">
+                                                <input class="form-control form--control" type="email" name="email">
+                                                <span class="la la-envelope input-icon"></span>
+                                            </div>
                                         </div>
 
-                                    </form>
-                                {% else %}
-                                    <p>برای ثبت نظر باید <a href="{% url 'account_app:login_page' %}">وارد شوید</a>.</p>
-                                {% endif %}
+                                        <!-- message -->
+                                        <div class="input-box col-lg-12">
+                                            <div class="form-group">
+                                                <textarea class="form-control form--control pl-3" name="message"
+                                                          rows="10"></textarea>
 
+                                            </div>
+                                        </div>
+                                    {% endif %}
+
+                                    <!-- captcha -->
+                                    <div class="input-box">
+                                        <label class="label-text">عبارت امنیتی</label>
+                                        <div class="form-group">
+                                            <img src="/captcha/image/74f443cbe4bcd75250beaf2ab50712d8b047be8d/" alt="captcha" class="captcha">
+                                            <input type="hidden" name="captcha_0" value="74f443cbe4bcd75250beaf2ab50712d8b047be8d" required="" id="id_captcha_0"
+                                                   autocomplete="off"><input type="text" name="captcha_1" required="" id="id_captcha_1" autocapitalize="off"
+                                                                             autocomplete="off" autocorrect="off" spellcheck="false">
+                                            <a href="#" id="refresh-captcha">↻ تغییر تصویر</a>
+
+
+                                        </div>
+                                    </div>
+
+                                    <!-- submit -->
+                                    <div class="btn-box col-lg-12">
+                                        <button class="btn theme-btn" type="submit">ثبت کردن نظر</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
