--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -40,7 +40,7 @@
                     داشبورد
                 </a>
             </li>
-            
+
             <!-- user profile -->
             <li class="dropdown {% if request.resolver_match.url_name in 'user_profile_detail user_profile_edit user_profile_change_password user_profile_change_email' %}show{% endif %}"
                 style="position: relative;">
@@ -262,33 +262,44 @@
                 </a>
             </li>
 
-            {% if request.user.is_superuser %}
-                <!-- Group -->
-                <li>
-                    <a href="{% url 'userprofile_app:group_list' %}">
-                        <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
-                            <path d="M0 0h24v24H0V0z" fill="none"></path>
-                            <path
-                                    d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
-                            ></path>
-                        </svg>
-                        نقش ها و دسترسی ها
-                    </a>
-                </li>
+            <!-- Group -->
+            <li>
+                <a href="{% url 'userprofile_app:group_list' %}">
+                    <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
+                        <path d="M0 0h24v24H0V0z" fill="none"></path>
+                        <path
+                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
+                        ></path>
+                    </svg>
+                    نقش ها و دسترسی ها
+                </a>
+            </li>
 
-                <!-- users -->
-                <li>
-                    <a href="{% url 'userprofile_app:user_list' %}">
-                        <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
-                            <path d="M0 0h24v24H0V0z" fill="none"></path>
-                            <path
-                                    d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
-                            ></path>
-                        </svg>
-                        لیست کاربران
-                    </a>
-                </li>
-            {% endif %}
+            <!-- users -->
+            <li>
+                <a href="{% url 'userprofile_app:user_list' %}">
+                    <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
+                        <path d="M0 0h24v24H0V0z" fill="none"></path>
+                        <path
+                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
+                        ></path>
+                    </svg>
+                    لیست کاربران
+                </a>
+            </li>
+
+            <!-- users -->
+            <li>
+                <a href="{% url 'account_app:logout_page' %}">
+                    <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
+                        <path d="M0 0h24v24H0V0z" fill="none"></path>
+                        <path
+                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
+                        ></path>
+                    </svg>
+                    خروج
+                </a>
+            </li>
 
 
         </ul>
