--- a/userprofile_app/templates/userprofile_app/articles/articles_list.html
+++ b/userprofile_app/templates/userprofile_app/articles/articles_list.html
@@ -19,8 +19,11 @@
                 <!-- user avatar -->
                 <div class="media media-card align-items-center">
                     <div class="media-img media--img media-img-md rounded-full">
-                        <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر کوچک">
-                    </div>
+                        {% if request.user.avatar %}
+                            <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر آواتار">
+                        {% else %}
+                            <img class="rounded-full" src="/static/images/team11.jpg" alt="تصویر آواتار">
+                        {% endif %}                     </div>
                     <div class="media-body">
                         <h2 class="section__title fs-30">{{ request.user.get_full_name }}</h2>
                         <div class="rating-wrap d-flex align-items-center pt-2">
