--- a/userprofile_app/templates/userprofile_app/lectures/lecture_category_form.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lecture_category_form.html
@@ -18,7 +18,11 @@
             <div class="breadcrumb-content d-flex flex-wrap align-items-center justify-content-between mb-5">
                 <div class="media media-card align-items-center">
                     <div class="media-img media--img media-img-md rounded-full">
-                        <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر کوچک ">
+                        {% if request.user.avatar %}
+                            <img class="rounded-full" src="{{ request.user.avatar.url }}" alt="تصویر آواتار">
+                        {% else %}
+                            <img class="rounded-full" src="/static/images/team11.jpg" alt="تصویر آواتار">
+                        {% endif %}
                     </div>
                     <div class="media-body">
                         <h2 class="section__title fs-30">{{ request.user.get_full_name }}</h2>
