--- a/userprofile_app/templates/userprofile_app/users/user_form.html
+++ b/userprofile_app/templates/userprofile_app/users/user_form.html
@@ -193,7 +193,7 @@
                                         <label class="label-text mr-5">ابرکاربر</label>
                                         <input type="checkbox" name="is_superuser"
                                                class="form-check-input" id="is_superuser"
-                                               {% if object.is_superuser %}checked{% endif %}>
+                                               {% if object.is_superuser %}checked{% endif %} disabled>
                                     </div>
                                 </div>
                             {% endif %}
